--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<div id="home">
+
+  <section class="homeText">
+    <div class="circle">
+      <div class="text">
+        <p><span>hello World !</span></p>
+        <p><span>bienvenue sur mon portfolio.</span></p>
+        <p><span>installez-vous confortablement,</span></p>
+        <p><span>et laissez-moi vous présenter</span></p>
+        <button type="button"><span>mes sites web</span></button>
+      </div>
+    </div>
+  </section>
+
+  <section class="homeImg">
+    <div class="img"></div>
+
+  </section>
+
+</div>
