page: projects and project + model

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <p><span>bienvenue sur mon portfolio.</span></p>
         <p><span>installez-vous confortablement,</span></p>
         <p><span>et laissez-moi vous présenter</span></p>
-        <button type="button"><span>mes sites web</span></button>
+        <button type="button" routerLink="/portfolio"><span>mes sites web</span></button>
       </div>
     </div>
   </section>
