--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,94 +6,203 @@ $circleRayon: 110vh;
 #home {
   width: 100vw;
   height: 100vh;
-  position: relative;
   overflow: hidden;
-  display: flex;
-}
-
-.homeText {
-  width: 30%;
-  height: 100%;
   position: relative;
-  .circle {
-    width: $circleRayon;
-    height: $circleRayon;
-    border-radius: 0 50% 50% 0;
-    background: $color-primary;
+  // display: flex;
+  background-image: url("./../../assets/img/ColoredPatternsT.svg"),linear-gradient(135deg, hsla(233, 35%, 18%, 1) 0%, hsla(242, 36%, 45%, 1) 100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+
+  #avatar {
     position: absolute;
-    left: -7vw;
     top: 50%;
-    transform: translateY(-50%);
-    box-shadow: inset 40px 0px 40px 50px rgb(0 0 0 / 38%);
-    .text {
-      height: fit-content;
-      width: 65%;
-      margin: auto;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+
+    img.avatarImg {
+      transform: scale(0);
+      width: clamp(400px, 28vw, 600px);
+      border-radius: 50%;
+      position: relative;
+    }
+    p {
+      opacity: 0;
+      width: max-content;
       position: absolute;
-      top: 50%;
-      left: 55%;
-      transform: translate(-50%, -50%);
+      font-family: 'Acme', sans-serif;
+      font-size: 85px;
       color: floralwhite;
-      font-family: 'Poiret One', cursive;
-      font-size: 35px;
-      p {
-        vertical-align: baseline;
-        margin: 15px 0;
-        overflow: hidden;
+      &.textHello {
+        left: -28%;
+      }
+      &.textWorld {
+        left: 70%;
+        bottom: 0;
+      }
+    }
+  }
+
+  #homePage {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    #welcomeText {
+      opacity: 1;
+      flex: 1;
+      margin: 3%;
+      color: white;
+      h2 {
+        font-family: 'Oswald', sans-serif;
+        font-size: 50px;
+        font-weight: 300;
+        color: #4c4848;
         span {
-          display: inline-block;
-          // transform: translateY(100%);
-          transition: transform 1s;
+          font-weight: 600;
         }
       }
       button {
-        font-size: 30px;
-        padding: 3px 8px;
-        background-color: $color-secondary;
-        opacity: 1;
-        color: floralwhite;
-        outline: none;
-        border: none;
-        transform: translate(50%, 30px) rotate(-4deg);
-        cursor: pointer;
-        span {
-          display: inline-block;
-          transform: rotate(4deg);
-        }
-        &::before {
-          content: "";
-          width: 100%;
-          height: 100%;
-          background-color: $color-secondary;
-          opacity: 0.5;
-          transform: translate(4px,4px);
-          position: absolute;
-          inset: 0;
-        }
-        &:active {
-          transform: translate(50%,36px) rotate(-4deg);
-          opacity: 0.8;
-          &::before {
-            transform: translate(0,0);
-          }
-        }
+        &.btn-grad {background-image: linear-gradient(to right, #e96443 0%, #904e95  51%, #e96443  100%)}
+        &.btn-grad {
+           margin: 10px;
+           padding: 15px 45px;
+           text-align: center;
+           text-transform: uppercase;
+           transition: 0.5s;
+           background-size: 200% auto;
+           color: white;
+           box-shadow: inset 2px 2px 5px #b3573b, inset -2px -2px 5px #282a52;
+           border-radius: 16px;
+           display: block;
+           border: none;
+           cursor: pointer;
+         }
+
+         &.btn-grad:hover {
+           background-position: right center; /* change the direction of the change here */
+           color: #fff;
+           text-decoration: none;
+         }
+         &.btn-grad:active {
+          box-shadow: inset -2px -2px 5px #b3573b, inset 2px 2px 5px #282a52;
+         }
+
+      }
+    }
+    .img {
+      width: 60%;
+      position: relative;
+      height: 100%;
+      img {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 90%;
+      }
+      img.clip1 {
+        left: 0%;
+        clip-path: inset(15px 69% 16px 0px round 16px 16px 16px 16px);
+      }
+      img.clip2 {
+        left: 0%;
+        clip-path: inset(0px 35% 30px 33% round 16px 16px 16px 16px);
+      }
+      img.clip3 {
+        left: 0%;
+        clip-path: inset(10px 0% 0px 67% round 16px 16px 16px 16px);
       }
     }
   }
 }
 
-.homeImg {
-  width: 70%;
-  height: 100%;
-  .img {
-    background: url("./../../assets/img/image.jpg");
-    width: 100%;
-    height: 100%;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-  }
+:is(.hidden) {
+  display: none !important;
 }
+
+// .homeText {
+//   width: 30%;
+//   height: 100%;
+//   position: relative;
+//   .circle {
+//     width: $circleRayon;
+//     height: $circleRayon;
+//     border-radius: 0 50% 50% 0;
+//     background: $color-primary;
+//     position: absolute;
+//     left: -7vw;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     box-shadow: inset 40px 0px 40px 50px rgb(0 0 0 / 38%);
+//     .text {
+//       height: fit-content;
+//       width: 65%;
+//       margin: auto;
+//       position: absolute;
+//       top: 50%;
+//       left: 55%;
+//       transform: translate(-50%, -50%);
+//       color: floralwhite;
+//       font-family: 'Poiret One', cursive;
+//       font-size: 35px;
+//       p {
+//         vertical-align: baseline;
+//         margin: 15px 0;
+//         overflow: hidden;
+//         span {
+//           display: inline-block;
+//           // transform: translateY(100%);
+//           transition: transform 1s;
+//         }
+//       }
+//       button {
+//         font-size: 30px;
+//         padding: 3px 8px;
+//         background-color: $color-secondary;
+//         opacity: 1;
+//         color: floralwhite;
+//         outline: none;
+//         border: none;
+//         transform: translate(50%, 30px) rotate(-4deg);
+//         cursor: pointer;
+//         span {
+//           display: inline-block;
+//           transform: rotate(4deg);
+//         }
+//         &::before {
+//           content: "";
+//           width: 100%;
+//           height: 100%;
+//           background-color: $color-secondary;
+//           opacity: 0.5;
+//           transform: translate(4px,4px);
+//           position: absolute;
+//           inset: 0;
+//         }
+//         &:active {
+//           transform: translate(50%,36px) rotate(-4deg);
+//           opacity: 0.8;
+//           &::before {
+//             transform: translate(0,0);
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .homeImg {
+//   width: 70%;
+//   height: 100%;
+//   .img {
+//     background: url("./../../assets/img/image.jpg");
+//     width: 100%;
+//     height: 100%;
+//     background-position: center;
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//     // position: absolute;
+//     // top: 0;
+//     // right: 0;
+//   }
+// }
