--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,7 +6,8 @@
 
 $color-primary: #0B3948;
 // $color-secondary: #E07A5F;
-$color-secondary: #e6937d;
+// $color-secondary: #e6937d;
+$color-secondary: #dc5a37;
 
 $font-text: 'Mulish', sans-serif;
 $font-titles: 'Oswald', sans-serif;
