design: home and project

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,12 +11,12 @@
       <h2><span>Bienvenue</span><br>sur mon portfolio</h2>
       <p>installez-vous confortablement, et laissez-moi vous présenter mes projets web.<br>
       de l'intégration de maquettes au développement full-stack, ils sont toujours responsives et accessibles</p>
-      <button type="button" class="btn-grad">Voir mes projets</button>
+      <button type="button" class="btn-grad" routerLink="/portfolio">Voir mes projets</button>
     </div>
     <div class="img">
-      <img class="clip1" src="./../../assets/img/home.jpg" alt="">
-      <img class="clip2" src="./../../assets/img/home.jpg" alt="">
-      <img class="clip3" src="./../../assets/img/home.jpg" alt="">
+      <img class="clip1" src="./../../assets/img/home2.jpg" alt="">
+      <img class="clip2" src="./../../assets/img/home2.jpg" alt="">
+      <img class="clip3" src="./../../assets/img/home2.jpg" alt="">
     </div>
   </div>
 
