--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,7 +9,8 @@ $circleRayon: 110vh;
   overflow: hidden;
   position: relative;
   // display: flex;
-  background-image: url("./../../assets/img/ColoredPatternsT.svg"),linear-gradient(135deg, hsla(233, 35%, 18%, 1) 0%, hsla(242, 36%, 45%, 1) 100%);
+  // background-image: url("./../../assets/img/ColoredPatternsT.svg"),linear-gradient(135deg, hsla(233, 35%, 18%, 1) 0%, hsla(242, 36%, 45%, 1) 100%);
+  background: url("./../../assets/img/PatternT.svg"), black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
