--- a/src/app/projects/projet/projet.component.html
+++ b/src/app/projects/projet/projet.component.html
@@ -16,6 +16,7 @@
 
   <section id="hero">
     <h2>{{projectDetails.name}}</h2>
+    <span>{{projectDetails.date}}</span>
     <div id="imgHero">
       <img [src]="projectDetails.images.main" alt="image du site {{projectDetails.name}}">
     </div>
