--- a/src/app/projects/projet/projet.component.scss
+++ b/src/app/projects/projet/projet.component.scss
@@ -5,7 +5,7 @@
   // background: $color-primary;
   // background: #062029;
   // background: black;
-  background: url("./../../../assets/img/PatternT.svg"), black;
+  background: url("./../../../assets/img/PatternT.svg"), #383840;
   background-attachment: fixed;
   color: floralwhite;
 }
@@ -56,12 +56,29 @@ section#hero {
     color: antiquewhite;
     text-shadow: 2px 4px 8px rgb(0 0 0 / 50%);
   }
+  span {
+    position: absolute;
+    right: 10px;
+    top: 46%;
+    font-size: 1.5rem;
+    color: antiquewhite;
+    &::before {
+      content: "";
+      width: 400%;
+      height: 2px;
+      position: inherit;
+      right: 0;
+      top: -5px;
+      background: linear-gradient(to right, #904e95 51%, #e96443 100%);
+    }
+  }
   #imgHero {
     display: block;
     width: 50%;
-    margin: auto;
-    padding-top: 10%;
+    margin-left: 20%;
+    // padding-top: 10%;
     overflow: hidden;
+    box-shadow: 2px 2px 10px 11px #292929;
     img {
       width: 100%;
       transition: transform 1s;
@@ -94,17 +111,23 @@ section#description {
 
 section#responsive {
   margin: 50px auto;
-  width: 100%;
+  width: 85%;
   height: 500px;
   display: flex;
   position: relative;
   .text {
-    width: 50%;
-    // background: $color-secondary;
-    background: linear-gradient(to right, #904e95 51%, #e96443 100%);
+    width: 40%;
+    position: relative;
     p {
-      width: 15%;
-      margin: 10%;
+      background: linear-gradient(to right, #904e95 51%, #e96443 100%);
+      box-shadow: 2px 2px 12px 2px #2e2e2e;
+      position: absolute;
+      left: 15%;
+      top: 50%;
+      z-index: 10;
+      height: 45%;
+      width: 100%;
+      // margin: 10%;
       font-family: 'Poiret One', sans-serif;
       font-size: 4rem;
       line-height: 1.5;
@@ -114,7 +137,7 @@ section#responsive {
     height: 100%;
     position: absolute;
     z-index: 10;
-    left: 50%;
+    right: -5%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: column;
@@ -122,16 +145,25 @@ section#responsive {
     .dot {
       width: 4rem;
       height: 4rem;
-      background: white;
-      color: #0B3948;
-      border: 5px solid $color-primary;
+      // background: white;
+      // color: #0B3948;
+      // border: 5px solid $color-primary;
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
+
+      color: #4f4f4f;
+      border: none;
+      background: #383840;
+      box-shadow:  10px 10px 20px #28282e,
+                  -10px -10px 20px #484852;
       &.active {
-        background-color: $color-primary;
-        color: white;
+        // background-color: $color-primary;
+
+      background: radial-gradient(#e96443 20%, #904e95 70%);
+        // color: white;
+        color: floralwhite;
       }
       span {
         font-size: 2rem;
