--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,31 +1,19 @@
 <div id="projectsListPage">
 
-  <!-- <div id="filterbanner">
-    <li class="filterWords">intégration</li>
-    <li class="filterWords">front-end</li>
-    <li class="filterWords">full-stack</li>
-    <li class="filterWords">angular</li>
-    <li class="filterWords">javascript</li>
-    <li class="filterWords">PHP</li>
-    <li class="filterWords">laravel</li>
-    <li class="filterWords">mySql</li>
-    <li class="filterWords">API</li>
-    <li class="filterWords">wordpress</li>
-    <li class="filterWords">bootstrap</li>
-    <li class="filterWords">vueJs</li>
-  </div> -->
-
   <div id="listOfProjects" #listOfProjects>
     <div class="projectCard" *ngFor="let project of list">
+      <div class="devCategory">
+        <span *ngFor="let item of project.development">{{item}}</span>
+      </div>
       <img [src]="project.images.main" alt="">
-      <!-- <h3>{{project.name}}</h3> -->
       <a [routerLink]="['/portfolio', project.path]">{{project.name}}</a>
     </div>
   </div>
 
   <section id="nav">
     <div id="progressionBar">
-
+      <div id="fixePart" #fixePart></div>
+      <div id="growingPart" #growingPart></div>
     </div>
     <div id="buttonsNav">
       <button (click)="navBack()" type="button">
