--- a/src/app/projects/projet/projet.component.html
+++ b/src/app/projects/projet/projet.component.html
@@ -2,15 +2,15 @@
 
   <button routerLink="/portfolio" class="close">
     <span class="material-icons">close</span>
-    <svg viewBox="0 0 100 100" width="110%" height="110%" xmlns="http://www.w3.org/2000/svg">
+    <svg viewBox="-5 -5 80 80" width="70" height="70" xmlns="http://www.w3.org/2000/svg">
       <defs>
         <linearGradient id="myGradient">
           <stop offset="0%"   stop-color="#904e95" />
           <stop offset="100%" stop-color="#e96443" />
         </linearGradient>
       </defs>
-      <circle cx="50%" cy="50%" r="45%" fill="none"
-              stroke="url(#myGradient)" />
+      <circle cx="35" cy="35" r="34.8" fill="none" stroke="white" class="bg-svg"/>
+      <circle cx="35" cy="35" r="34.8" fill="none" stroke="url(#myGradient)" pathLength="1" id="filledSvg" [attr.stroke-dashoffset]="strokeDashoffset" #filledSvg/>
     </svg>
   </button>
 
@@ -22,42 +22,58 @@
     </div>
   </section>
 
-  <section id="description">
-    <div id="descProject">
-      <h3>le projet</h3>
-      <p>{{projectDetails.goal}}</p>
+  <section id="tools">
+    <h3>les outils</h3>
+    <div id="toolsList">
+      <span *ngFor="let item of projectDetails.tools">{{item}}</span>
     </div>
-
-    <div id="descFunctionalities">
-      <h3>les objectifs</h3>
-      <p *ngFor="let item of projectDetails.objectives">{{item}}</p>
-    </div>
-
   </section>
 
-  <section id="responsive">
-    <div class="text">
-      <p>un site responsive</p>
-    </div>
-    <div class="slider-dots">
-      <button class="dot active"><span class="material-icons">computer</span></button>
-      <button class="dot"><span class="material-icons">tablet_mac</span></button>
-      <button class="dot"><span class="material-icons">phone_iphone</span></button>
-    </div>
-    <div class="slider">
-      <div id="wrapper" #wrapper>
-        <div class="imgResponsive">
-          <img [src]="projectDetails.images.desktop" alt="Site {{projectDetails.name}} sur desktop">
+  <div id="scroller">
+
+    <section id="description">
+      <div id="descProject">
+        <h3>le projet</h3>
+        <p [innerHTML]="projectDetails.goal"></p>
+      </div>
+    </section>
+
+    <section id="objectives">
+      <div id="descFunctionalities">
+        <h3>les objectifs</h3>
+        <ul>
+          <li *ngFor="let item of projectDetails.objectives">{{item}}</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="responsive">
+      <div class="wrapper">
+        <div class="text">
+          <p>un site responsive</p>
         </div>
-        <div class="imgResponsive">
-          <img [src]="projectDetails.images.tablet" alt="Site {{projectDetails.name}} sur tablette">
+        <div class="slider-dots">
+          <button class="dot active"><span class="material-icons">computer</span></button>
+          <button class="dot"><span class="material-icons">tablet_mac</span></button>
+          <button class="dot"><span class="material-icons">phone_iphone</span></button>
         </div>
-        <div class="imgResponsive">
-          <img [src]="projectDetails.images.mobile" alt="Site {{projectDetails.name}} sur mobile">
+        <div class="slider">
+          <div id="wrapper" #wrapper>
+            <div class="imgResponsive">
+              <img [src]="projectDetails.images.desktop" alt="Site {{projectDetails.name}} sur desktop">
+            </div>
+            <div class="imgResponsive">
+              <img [src]="projectDetails.images.tablet" alt="Site {{projectDetails.name}} sur tablette">
+            </div>
+            <div class="imgResponsive">
+              <img [src]="projectDetails.images.mobile" alt="Site {{projectDetails.name}} sur mobile">
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+  </div>
 
   <section id="footer">
     <div *ngIf="pathOfPreviousProject" class="previousProject navOtherProject">
