--- a/src/app/projects/projet/projet.component.scss
+++ b/src/app/projects/projet/projet.component.scss
@@ -19,14 +19,14 @@ button.close {
   top: 5%;
   left: 50%;
   transform: translateX(-50%);
-  // padding: 10px;
   border-radius: 50%;
   color: floralwhite;
   border: none;
   outline: none;
   background: #242432;
+  box-shadow: 0px 0px 8px 0px black;
   opacity: 0.4;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
   span {
     font-size: 35px;
     position: absolute;
@@ -99,6 +99,25 @@ section#hero {
       transform: scale(1.05);
     }
   }
+
+  a#urlLink {
+    position: absolute;
+    right: 115px;
+    bottom: 65px;
+    padding: 12px 24px;
+    text-decoration: none;
+    color: white;
+    background: blueviolet;
+    border-radius: 25px;
+    font-size: 1.2rem;
+    box-shadow: 0 0 0 0 #3b324a;
+    animation: pulse 1.3s infinite;
+  }
+  @keyframes pulse {
+    to {
+        box-shadow: 0 0 0 20px transparent;
+    }
+}
 }
 
 h3 {
@@ -108,19 +127,25 @@ h3 {
   color: gray;
   width: fit-content;
   /* padding: 0px 20px; */
-  transform: rotate(-90deg);
+  // transform: rotate(-90deg);
 }
 
 section#tools {
-  background: white;
+  // background: white;
+  background: url('./../../../assets/img/PatternT.svg'), white;
+  background-attachment: fixed;
   color: black;
   padding: 5%;
   #toolsList {
     color: snow;
     display: flex;
     justify-content: center;
+    background: linear-gradient(to right, #904e95 51%, #e96443 100%);
+    flex-grow: 1;
+    height: fit-content;
+    flex-wrap: wrap;
+    box-shadow: 2px 3px 9px 1px #5e5e5e;
     span {
-      background: linear-gradient(to right, #904e95 51%, #e96443 100%);
       display: inline-block;
       margin: 15px;
       padding: 10px 20px;
@@ -132,15 +157,17 @@ section#tools {
 #scroller {
   section {
     height: 100vh;
+    display: flex;
+    align-items: center;
   }
 }
 section#description {
-  margin: 80px auto;
+  // margin: 80px auto;
   padding: 0 10%;
   #descProject {
     display: flex;
   }
-  p, li {
+  p {
     width: 70%;
     margin: auto;
     line-height: 1.6;
@@ -148,7 +175,18 @@ section#description {
     font-size: 30px;
     text-align: justify;
   }
-  #descFunctionalities {
+}
+
+section#objectives{
+  li {
+    width: 70%;
+    margin: auto;
+    line-height: 1.6;
+    white-space: pre-line;
+    font-size: 30px;
+    text-align: justify;
+  }
+  #descObjectives {
     h3 {
       text-align: right;
     }
@@ -156,6 +194,7 @@ section#description {
 }
 
 section#responsive {
+  overflow: hidden;
   .wrapper {
     margin: 50px auto;
     width: 85%;
@@ -169,15 +208,15 @@ section#responsive {
         background: linear-gradient(to right, #904e95 51%, #e96443 100%);
         box-shadow: 2px 2px 12px 2px #2e2e2e;
         position: absolute;
-        left: 15%;
+        left: 20%;
         top: 50%;
         z-index: 10;
         height: 45%;
         width: 100%;
         // margin: 10%;
         font-family: 'Poiret One', sans-serif;
-        font-size: 4rem;
-        line-height: 1.5;
+        font-size: 3.7rem;
+        line-height: 1.3;
       }
     }
     .slider-dots {
@@ -254,10 +293,12 @@ section#responsive {
 
 section#footer {
   position: relative;
-  height: 170px;
+  height: 200px;
   .navOtherProject {
     display: flex;
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
     &.nextProject {
       right: 0;
     }
